Add reply section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/actions.css">
 
   <title>Interactive comments section</title>
 
@@ -97,8 +98,15 @@
 
   </section>
 
-  <section id="my-response" class="my-response">
-
+  <section id="my-reply" class="my-reply">
+    <div class="reply-container">
+      <img src="./images/avatars/image-juliusomo.png" width="40" height="40" class="desktop-only">
+      <textarea placeholder="Add a comment..." rows="3"></textarea>
+      <div class="reply-action">
+        <img src="./images/avatars/image-juliusomo.png" width="34" height="34" alt="juliusomo" class="mobile-only">
+        <button class="btn">SEND</button>
+      </div>
+    </div>
   </section>
 
   <!--<div class="attribution">
