Add active states layout

--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
       </div>
     </div>
 
+    <div class="reply-container">
+      <img src="./images/avatars/image-juliusomo.png" width="40" height="40" class="desktop-only">
+      <textarea placeholder="Add a comment..." rows="3"></textarea>
+      <div class="reply-action">
+        <img src="./images/avatars/image-juliusomo.png" width="34" height="34" alt="juliusomo" class="mobile-only">
+        <button class="btn">REPLY</button>
+      </div>
+    </div>
+
     <div class="comment">
       <div class="comnt">
         <div class="comnt-info">
@@ -71,6 +80,15 @@
         <button class="btn reply-btn">
           <img src="images/icon-reply.svg" alt="">&nbsp; Reply
         </button>
+      </div>
+    </div>
+
+    <div class="reply-container">
+      <img src="./images/avatars/image-juliusomo.png" width="40" height="40" class="desktop-only">
+      <textarea placeholder="Add a comment..." rows="3"></textarea>
+      <div class="reply-action">
+        <img src="./images/avatars/image-juliusomo.png" width="34" height="34" alt="juliusomo" class="mobile-only">
+        <button class="btn">REPLY</button>
       </div>
     </div>
 
@@ -102,6 +120,15 @@
     </div>
     </div>
 
+    <div class="reply-container sub-reply">
+      <img src="./images/avatars/image-juliusomo.png" width="40" height="40" class="desktop-only">
+      <textarea placeholder="Add a comment..." rows="3"></textarea>
+      <div class="reply-action">
+        <img src="./images/avatars/image-juliusomo.png" width="34" height="34" alt="juliusomo" class="mobile-only">
+        <button class="btn">REPLY</button>
+      </div>
+    </div>
+
     <div class="reply-comment">
       <div class="comnt">
         <div class="comnt-info">
@@ -115,8 +142,10 @@
           </span>
         </div>
         <div class="comnt-text">
-          <p><span class="reply-user">@ramsesmiron</span> I couldn't agree more with this. Everything moves so fast and it always seems like everyone knows the newest 
+          <p style="display: none;"><span class="reply-user">@ramsesmiron</span> I couldn't agree more with this. Everything moves so fast and it always seems like everyone knows the newest 
             library/ framework. But the fundamentals are what stay constant.</p>
+          <textarea placeholder="Add a comment..." rows="4">@ramsesmiron I couldn't agree more with this. Everything moves so fast and it always seems like everyone knows the newest library/ framework. But the fundamentals are what stay constant.</textarea>
+          <button class="btn update-btn">UPDATE</button>
         </div>
       </div>
       <div class="voting-detail">
@@ -128,7 +157,7 @@
         <button class="btn delete-btn">
           <img src="images/icon-delete.svg" alt="">&nbsp; Delete
         </button>
-        <button class="btn edit-btn">
+        <button class="btn edit-btn" type="button" disabled>
           <img src="images/icon-edit.svg" alt="">&nbsp; Edit
         </button>
       </div>
@@ -136,7 +165,7 @@
 
   </section>
 
-  <section id="my-reply" class="my-reply">
+  <section id="active-user-reply" class="active-user-reply">
 
     <div class="reply-container">
       <img src="./images/avatars/image-juliusomo.png" width="40" height="40" class="desktop-only">
