Add dynamic reply box

--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
     Coded by <a href="#">Your Name Here</a>.
   </div>-->
 
+  <script src="js/actions.js"></script>
   <script src="js/main.js"></script>
 </body>
 
