Add delete and edit actions

--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@
     Coded by <a href="#">Your Name Here</a>.
   </div>-->
 
-  <script src="js/actions.js"></script>
+  <script src="js/replyAction.js"></script>
+  <script src="js/userActions.js"></script>
   <script src="js/main.js"></script>
 </body>
 
