Add comment refactor

--- a/index.html
+++ b/index.html
@@ -197,14 +197,14 @@
 
   </section>
 
-  <section id="active-user-reply" class="active-user-reply">
+  <section id="user-coment" class="active-user-reply">
 
     <div class="reply-box">
       <img src="./images/avatars/image-juliusomo.png" width="40" height="40" class="desktop-only">
       <textarea placeholder="Add a comment..." rows="3"></textarea>
       <div class="reply-action">
         <img src="./images/avatars/image-juliusomo.png" width="34" height="34" alt="juliusomo" class="mobile-only">
-        <button class="btn">SEND</button>
+        <button class="btn" onclick="sendComent()" >SEND</button>
       </div>
     </div>
 
@@ -215,6 +215,7 @@
     Coded by <a href="#">Your Name Here</a>.
   </div>-->
 
+  <script src="js/comment.js"></script>
   <script src="js/replyAction.js"></script>
   <script src="js/userActions.js"></script>
   <script src="js/main.js"></script>
