--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     Coded by <a href="#">Your Name Here</a>.
   </div>-->
 
+  <script src="js/utilities.js"></script>
   <script src="js/comment.js"></script>
   <script src="js/replyAction.js"></script>
   <script src="js/userActions.js"></script>
