Display comments from local storage

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   </section>
 
-  <div id="loading">
+  <div id="loading" style="display: none;">
     <center>
       <br><br><br>
       <svg width="38" height="38" viewBox="0 0 38 38" xmlns="http://www.w3.org/2000/svg" stroke="#D8587E">
