--- a/index.html
+++ b/index.html
@@ -74,6 +74,19 @@
 
   </section>
 
+  <template id="modal-template">
+    <section id="del-modal" class="modal md-close" onclick="closeModal(event)">
+      <div class="modal-container">
+        <h2>Delete comment</h2>
+        <p>Are you sure you want to delete this comment?
+        This will remove the comment and can't be undone.</p>
+        <div class="modal-actions">
+        
+        </div>
+      </div>
+    </section>
+  </template>
+
   <!--<div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
