Add utilities for dates and ids

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     Coded by <a href="#">Your Name Here</a>.
   </div>-->
 
+  <script src="js/moment.min.js"></script>
   <script src="js/utilities.js"></script>
   <script src="js/comment.js"></script>
   <script src="js/replyAction.js"></script>
