Add voting details from comments

--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@
             <p class="comnt-txt">  </p>
           </div>
         </div>
-        <div class="voting-detail">
-          <button class="btn vote-btn"> + </button>
-          <p class="vote-number">  </p>
-          <button class="btn vote-btn"> - </button>
+        <div class="vote-detail">
+          
         </div>
         <div class="comment-action">
           
@@ -97,6 +95,7 @@
   <script src="js/comment.js"></script>
   <script src="js/replyAction.js"></script>
   <script src="js/userActions.js"></script>
+  <script src="js/voteAction.js"></script>
   <script src="js/main.js"></script>
 </body>
 
