Fix accessibility issues

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <main>
 
-    <div role="main comments" id="comments" class="comments">
+    <div role="doc-qna" id="comments" class="comments">
 
       <template id="comment-template">
         <div class="comment">
@@ -60,9 +60,9 @@
       </center>
     </div>
   
-    <div role="user-comment" id="user-coment" class="active-user-reply">
+    <div id="user-coment" class="active-user-reply">
   
-      <div role="textbox" class="reply-box">
+      <div role="dialog" class="reply-box">
         <img src="./images/avatars/image-juliusomo.png" width="40" height="40" class="desktop-only" alt="juliusomo">
         <textarea placeholder="Add a comment..." rows="3"></textarea>
         <div class="reply-action">
