--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
   
     <template id="modal-template">
-      <section role="alert" id="del-modal" class="modal md-close" onclick="closeModal(event)">
+      <div id="del-modal" class="modal md-close" onclick="closeModal(event)">
         <div class="modal-container">
           <h2>Delete comment</h2>
           <p>Are you sure you want to delete this comment?
@@ -83,7 +83,7 @@
           
           </div>
         </div>
-      </section>
+      </div>
     </template>
 
   </main>
