Fix minor issue

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   
     <div id="user-coment" class="active-user-reply">
   
-      <div role="dialog" class="reply-box">
+      <div class="reply-box">
         <img src="./images/avatars/image-juliusomo.png" width="40" height="40" class="desktop-only" alt="juliusomo">
         <textarea placeholder="Add a comment..." rows="3"></textarea>
         <div class="reply-action">
